# trix

./: .gitignore  Cargo.toml  build.nu  flake.nix  readme.md  rust-toolchain.toml  trix.nu
dev/: flake.nix
tests/: Cargo.toml  build.rs
tests/src/: lib.rs
trix-build/: Cargo.toml
trix-build/src/: error.rs  lib.rs
